Editing section design and updating some content

--- a/styles.css
+++ b/styles.css
@@ -190,30 +190,36 @@ html, body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  gap: 30px;
+  gap: 0px;
   flex-wrap: wrap;
   margin-top: 40px;
-  padding-left: 50px;
+  padding-left: 11%;
+  padding-right: 15%;
 }
 
 .sec {
-  display: flex;
-  justify-content: right;
-  gap: 20px;                
-  align-items: right;      
+  flex: 1 1 300px;
+  background: #c8f6ff;
+  border-left: 6px solid #0d2d61;
   padding: 20px 25px;
-  padding-left: 80px;
+  margin: 0px 0 0px 50%;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+  border-radius: 6px;
+  max-width: 600px;
+  max-height: 200px;
+  font-family: 'Segoe UI', sans-serif;
 }
 
 .education-card {
   flex: 1 1 300px;
   background: #c8f6ff;
-  border-left: 6px solid #0d2d61;
+  border-right: 6px solid #0d2d61;
   padding: 20px 25px;
   margin: 20px 0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   border-radius: 6px;
-  max-width: 700px;
+  max-width: 600px;
+  max-height: 200px;
   font-family: 'Segoe UI', sans-serif;
 }
 
@@ -250,7 +256,7 @@ html, body {
 }
   .project-card {
   width: 400px;
-  background-color: #fff;
+  background-color: #bde8f4;
   border-radius: 12px;
   box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
   overflow: hidden;
