--- a/styles.css
+++ b/styles.css
@@ -79,12 +79,13 @@ html, body {
   font-family: 'Segoe UI', sans-serif;
 }
 
-.btn {
+.card-overlay .btn {
       padding: 14px 28px;
       font-size: 16px;
       font-weight: bold;
+      height: 50px;
       color: white;
-      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      background: linear-gradient(135deg, #c29908, #b1b075);
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -95,7 +96,7 @@ html, body {
     .btn:hover {
       transform: translateY(-2px);
       box-shadow: 0 6px 16px rgba(0, 0, 0, 0.2);
-      background: linear-gradient(135deg, #0072ff, #00c6ff); /* reverse gradient */
+      background: linear-gradient(135deg, #b1b075, #c29908); /* reverse gradient */
     }
 
     @media (max-width: 600px) {
@@ -130,7 +131,7 @@ html, body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: rgb(178, 220, 237);
+  color: rgb(208, 227, 235);
   text-align: center;
   padding: 20px;
   background: rgba(0, 0, 0, 0.4);
@@ -138,8 +139,11 @@ html, body {
 }
 
 .card-overlay h1 {
-  font-size: 4.5em;
+  font-size: 6.5em;
   margin-bottom: 20px;
+  font-family: "Abril Fatface", serif;
+  font-weight: 800;
+  font-style: normal;
 }
 
 .card-overlay p {
@@ -164,6 +168,10 @@ html, body {
   font-family: 'Segoe UI', sans-serif;
 }
 
+.about-me h2 {
+  font-size: 2.5em;
+}
+
 .about-container {
   display: flex;
   flex-direction: row;
@@ -175,6 +183,7 @@ html, body {
 }
 
 .about-image img {
+  font: serif;
   width: 300px;
   height: auto;
   border-radius: 8px;
@@ -219,32 +228,23 @@ html, body {
   gap: 0px;
   flex-wrap: wrap;
   margin-top: 40px;
-  padding-left: 11%;
-  padding-right: 15%;
+  padding-left: 20%;
+  padding-right: 20%;
 }
 
-.sec {
-  flex: 1 1 300px;
-  background: #c8f6ff;
-  border-left: 6px solid #0d2d61;
-  padding: 20px 25px;
-  margin: 0px 0 0px 50%;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
-  border-radius: 6px;
-  max-width: 600px;
-  max-height: 200px;
-  font-family: 'Segoe UI', sans-serif;
+.education h2 {
+  font-size: 2.5em;
 }
 
 .education-card {
   flex: 1 1 300px;
   background: #c8f6ff;
-  border-right: 6px solid #0d2d61;
+  border-left: 6px solid #0d2d61;
   padding: 20px 25px;
   margin: 20px 0;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
   border-radius: 6px;
-  max-width: 600px;
+  max-width: 1000px;
   max-height: 200px;
   font-family: 'Segoe UI', sans-serif;
 }
@@ -277,8 +277,14 @@ html, body {
   display: flex;
   gap: 20px;                
   align-items: center;      
-  padding: 50px;
+  padding: 20px 0 0 40px;
 }
+
+.projects h2 {
+  font-size: 2.5em;
+
+}
+
   .project-card {
   width: 400px;
   background-color: #bde8f4;
@@ -319,6 +325,7 @@ html, body {
   color: #fff;
   padding: 10px 20px;
   border-radius: 6px;
+  max-height: 50px;
   transition: background-color 0.3s ease;
 }
 
@@ -327,34 +334,41 @@ html, body {
 }
 
 /* Contact section */
-.contact {
+.main-contact {
   display: flex;
   align-items: center;
-  background: #f9f9f9;
-  padding: 60px 20px;
-  text-align: center;
-  font-family: 'Segoe UI', sans-serif;
-}
-
-.contact-info h2 {
-  font-size: 3.5em;
-  margin-bottom: 20px;
-  color: #2967cb;
+  justify-content: center;
+  max-width: 1200px;
+  margin: auto;
+  gap: 40px
 }
 
 .contact-info {
+  display: flex;
   flex: 1;
   align-items: center;
+  padding: 20px;
+  gap: 20px;
 }
 
-.c-form {
-  flex: 1;
+.contact h2 {
+  font-size: 3.5em;
+  margin-bottom: 20px;
+  color: #000000;
 }
 
 .contact-form {
+  flex: 1;
   max-width: 600px;
   margin: auto;
   text-align: left;
+  padding-left: 200px;
+}
+
+.contact-info img {
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
 }
 
 .form-group {
@@ -394,13 +408,20 @@ html, body {
 
 /* intrests section */
 .interests {
-  background: #025b7b9e;
-  padding: 50px 60px;
+  padding: 50px 20%;
+  align-items: center;
   text-align: center;
   font-family: 'Segoe UI', sans-serif;
 }
+
+.interests h2 {
+  font-size: 2.5em;
+  color: #000000;
+  margin-bottom: 50px;
+}
+
 .interests-card {
-  background: #ffffff;
+  background: #cceef1;
   border-left: 6px solid #0d2d61;
   padding: 25px;
   padding-left: 30px;
@@ -408,7 +429,8 @@ html, body {
   border-radius: 6px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
   font-family: 'Segoe UI', sans-serif;
-  max-width: 500px;
+  max-width: 1000px;
+  text-align: left;
 }
 
 .interests-card h3 {
@@ -442,6 +464,21 @@ footer {
 .footer-content {
   max-width: 1000px;
   margin: auto;
+}
+
+.footer-social {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.footer-social img {
+  width: 30px;
+  height: 30px;
+  transition: transform 0.3s;
+  background-color: white;
 }
 
 .footer-content p {
