--- a/styles.css
+++ b/styles.css
@@ -140,7 +140,7 @@ html, body {
 }
 
 .card-overlay h1 {
-  font-size: 6.5em;
+  font-size: 9.5em;
   margin-bottom: 20px;
   font-family: "Abril Fatface", serif;
   font-weight: 800;
@@ -167,10 +167,11 @@ html, body {
 .about-me {
   padding: 50px 20px;
   font-family: 'Segoe UI', sans-serif;
+  background-color: #baedff;
 }
 
 .about-me h2 {
-  font-size: 2.5em;
+  font-size: 3.5em;
 }
 
 .about-container {
@@ -211,6 +212,39 @@ html, body {
   line-height: 1.6;
 }
 
+  .skills-section {
+      max-width: 1000px;
+      margin: auto;
+      text-align: left;
+    }
+
+    .skills-section h3 {
+      margin-bottom: 30px;
+      color: #191a1c;
+      
+    }
+
+    .card-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 20px;
+    }
+
+    .skill-card {
+      background: #fff;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.06);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      font-weight: bold;
+      color: #0d2d61;
+    }
+
+    .skill-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 24px rgba(0, 0, 0, 0.1);
+    }
+
 /* Mobile responsive */
 @media (max-width: 768px) {
   .about-container {
@@ -239,7 +273,7 @@ html, body {
 }
 
 .education h2 {
-  font-size: 2.5em;
+  font-size: 3.5em;
 }
 
 .education-card {
@@ -288,7 +322,7 @@ html, body {
 }
 
 .projects h2 {
-  font-size: 2.5em;
+  font-size: 3.5em;
 
 }
 
@@ -323,6 +357,19 @@ html, body {
 .card-content p {
   color: #353535;
   margin: 15px 0;
+}
+
+@media (max-width: 768px) {
+  .project {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .card-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
 }
 
 .btn {
@@ -413,6 +460,19 @@ html, body {
   background-color: #0b2451;
 }
 
+@media (max-width: 768px) {
+  .main-contact {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .contact-info {
+    flex-direction: column;
+    align-items: center;
+  }
+
+}
+
 /* intrests section */
 .interests {
   padding: 50px 20%;
@@ -422,7 +482,7 @@ html, body {
 }
 
 .interests h2 {
-  font-size: 2.5em;
+  font-size: 3.5em;
   color: #000000;
   margin-bottom: 50px;
 }
@@ -485,6 +545,8 @@ footer {
   width: 30px;
   height: 30px;
   transition: transform 0.3s;
+  background: white;
+  border-radius: 50%;
 }
 
 .footer-content p {
